got dataframe and external file

--- a/astrotest.ipynb
+++ b/astrotest.ipynb
@@ -23,19 +23,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "import csv\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Open your log of previous guesses (or begin a new one) using your first name as the file name. This log will be used to track your results over time and determine your accuracy.\n",
+    "name=input(\"What is your first name?.\")\n",
+    "with open (f\"{name}.csv\",'a') as allpckts:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,23 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Get your true reading\n",
-    "params = (\n",
-    "('sign', sign),\n",
-    "('day', 'today'),\n",
-    ")\n",
-    "\n",
-    "true_results=requests.post('https://aztro.sameerkumar.website/', params=params)\n",
-    "true_results_json=api_json = results.json()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,12 +115,13 @@
     "wronglist=[]\n",
     "for i in range(3):\n",
     "    compguess=random.choice(zodiaclist)\n",
+    "    zodiaclist.remove(compguess)\n",
     "    wronglist.append(compguess)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +148,8 @@
       "\n",
       "CHOICE NUMBER 2\n",
       "----------------\n",
-      "MOOD: Smart\n",
-      "Reading: Focus your intellectual energy on low-key matters -- you've got to make sure that you're taking in as much as possible! You should get one major clue about an unseen force that affects you deeply.\n",
+      "MOOD: Busy\n",
+      "Reading: You need to deal with business today -- it may just be work, or it could be bills at home or something even more complex. Even if you'd rather duck the issue, it's not going anywhere!\n",
       "\n",
       "\n",
       "CHOICE NUMBER 3\n",
@@ -161,8 +160,8 @@
       "\n",
       "CHOICE NUMBER 4\n",
       "----------------\n",
-      "MOOD: Smart\n",
-      "Reading: Focus your intellectual energy on low-key matters -- you've got to make sure that you're taking in as much as possible! You should get one major clue about an unseen force that affects you deeply.\n",
+      "MOOD: Creative\n",
+      "Reading: Your left brain is fully activated today, and you can think through even the most complex of plans with ease. It's a really good time for you to set yourself on a new course, even if it seems uncertain.\n",
       "\n",
       "\n"
      ]
@@ -192,9 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-9d1da1f37f21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Make your guess!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmake_guess\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Type the number of your choice. Which zodiac reading sounds the most accurate to you?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "#Make your guess!\n",
     "make_guess=input(\"Type the number of your choice. Which zodiac reading sounds the most accurate to you?\")"
@@ -202,14 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let the computer guess randomly\n",
+    "compchoice=random.choice(testlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Your Real Sign: Cancer \nYour Guess: Taurus\n"
+      "Your Real Sign: Cancer \nYour Guess: Aquarius\n"
      ]
     }
    ],
@@ -222,80 +243,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Generate today's datapoint\n",
+    "today = date.today()\n",
+    "guess_correct=sign==your_guess\n",
+    "guess_correct_val=0\n",
+    "comp_correct_val=0\n",
+    "if guess_correct==True:\n",
+    "    guess_correct_val =1\n",
+    "else:\n",
+    "    guess_correct_val=0\n",
+    "random_guess = compchoice\n",
+    "comp_correct=random_guess==sign\n",
+    "if comp_correct==True:\n",
+    "    comp_correct_val=1\n",
+    "else:\n",
+    "    comp_correct_val=0\n",
+    "\n",
+    "datapoint=[today,sign,your_guess, guess_correct_val, random_guess, comp_correct_val]\n",
+    "datapoint_df=pd.DataFrame(datapoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open (f\"{name}.csv\",'a') as allpckts:\n",
+    "        writer = csv.writer(allpckts)\n",
+    "        writer.writerow(datapoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2021-04-22\n"
+      "         Date True Sign Your Guess You Right Random Guess Random Right\n0  2021-04-22    cancer   aquarius     False       cancer         True\n1  2021-04-22    cancer   aquarius     False       cancer         True\n2  2021-04-22    cancer   aquarius         0            1         True\n3  2021-04-22    cancer   aquarius         0         True            1\n4  2021-04-22    cancer   aquarius         0       cancer            1\n"
      ]
     }
    ],
    "source": [
-    "#Generate today's datapoint\n",
-    "today = date.today()\n",
-    "print(today)\n",
-    "guess_correct=sign==your_guess\n",
-    "datapoint=[today,sign,your_guess, guess_correct, ]"
+    "#Examine your results for guesses so far\n",
+    "data=pd.read_csv(f\"{name}.csv\" , names=[\"Date\",\"True Sign\",\"Your Guess\",\"You Right\",\"Random Guess\",\"Random Right\"])\n",
+    "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "guesslog=pd.DataFrame(columns=[\"Date\",\"Right Answer\", \"Your Guess\", \"Your Guess Correct?\", \"Random Guess\",  \"Random Guess Correct?\"])"
+    "\n",
+    "rightcol = data[\"You Right\"]\n",
+    "compcol=data[\"Random Right\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "So far, you have made correct guesses 0.0% of the time.\n"
+     ]
+    },
+    {
      "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "'type' object does not support item assignment",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'True'",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-135-f31d725f8939>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtodaylog\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Date\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'type' object does not support item assignment"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-85-422aa79724b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mcompcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcompcol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mcompcount\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'True'"
      ]
     }
    ],
    "source": [
-    "todaylog = pd.DataFrame(\n",
-    "   ...:     {\n",
-    "   ...:         \"Date\": [f\"{month}/{day}\"],\n",
-    "   ...:         \"Right Answer\": [astro_sign[0]],\n",
-    "   ...:         \"Your Guess\": [guess],\n",
-    "   ...:         \"D\": [\"D4\", \"D5\", \"D6\", \"D7\"],\n",
-    "   ...:     },\n",
-    "   ...:     index=[4, 5, 6, 7],"
+    "rightcount=0\n",
+    "for item in rightcol:\n",
+    "    if int(item) ==1:\n",
+    "        rightcount +=1\n",
+    "    else:\n",
+    "        continue\n",
+    "rightpercent = rightcount/n\n",
+    "print(f\"So far, you have made correct guesses {rightpercent*11}% of the time.\")\n",
+    "\n",
+    "compcount=0\n",
+    "for item in compcol:\n",
+    "    if int(item) == 1:\n",
+    "        compcount +=1\n",
+    "    else:\n",
+    "        continue\n",
+    "comppercent = compcount/n\n",
+    "print(f\"So far, random guessing by the computer has worked {comppercent*100}% of the time.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "False"
+       "0    True\n",
+       "1    True\n",
+       "2    True\n",
+       "3       1\n",
+       "4       1\n",
+       "Name: Random Right, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 244
+     "execution_count": 84
     }
    ],
    "source": [
-    "guess_correct"
+    "compcol"
    ]
   },
   {
