found correct t-test formula for random chance making full regression test unnecessary

--- a/astrotest.ipynb
+++ b/astrotest.ipynb
@@ -1,29 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python385jvsc74a57bd09a492a932a5bed98d6f8e1b5f1ae1d46b2b5df4ebd9e59fb2d1181a1f217f2fd",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +11,13 @@
     "import pandas as pd\n",
     "from datetime import date\n",
     "import csv\n",
-    "import random"
+    "import random\n",
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +63,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Enter your Birthday</h1>\n",
+    "<h2>A window will appear at the top of the screen prompting you for your birthday information. First, enter the number representing the month of your birth (e.g. January = 1) with NO leading zeros. Next, enter the day of your birth (e.g. the 1rst = 1), with NO leading zeros</h2>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,63 +93,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cancer'"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Get 3 Wrong Guesses\n",
-    "zodiaclist=[\"sagittarius\", \"capricorn\", \"aquarius\", \"pisces\", \"aries\", \"taurus\", \"gemini\", \"cancer\", \"leo\", \"virgo\", \"libra\", \"scorpio\"]\n",
-    "zodiaclist.remove(sign)\n",
-    "wronglist=[]\n",
-    "for i in range(3):\n",
-    "    compguess=random.choice(zodiaclist)\n",
-    "    zodiaclist.remove(compguess)\n",
-    "    wronglist.append(compguess)"
+    "#test your sign (running this cell should output your zodiac sign. If this is not the case, start over and try again.)\n",
+    "sign.title()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sagittarius',\n",
+       " 'capricorn',\n",
+       " 'aquarius',\n",
+       " 'pisces',\n",
+       " 'aries',\n",
+       " 'taurus',\n",
+       " 'gemini',\n",
+       " 'cancer',\n",
+       " 'leo',\n",
+       " 'virgo',\n",
+       " 'libra',\n",
+       " 'scorpio']"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zodiaclist=[\"sagittarius\", \"capricorn\", \"aquarius\", \"pisces\", \"aries\", \"taurus\", \"gemini\", \"cancer\", \"leo\", \"virgo\", \"libra\", \"scorpio\"]\n",
+    "zodiaclist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Get 4 Wrong Answers\n",
+    "wronglist=[item for item in zodiaclist if item != sign]\n",
+    "fakes=[]\n",
+    "for i in range(4):\n",
+    "    onefake=random.choice(wronglist)\n",
+    "    fakes.append(onefake)\n",
+    "    wronglist.remove(onefake)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sagittarius',\n",
+       " 'capricorn',\n",
+       " 'aquarius',\n",
+       " 'pisces',\n",
+       " 'aries',\n",
+       " 'taurus',\n",
+       " 'gemini',\n",
+       " 'cancer',\n",
+       " 'leo',\n",
+       " 'virgo',\n",
+       " 'libra',\n",
+       " 'scorpio']"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zodiaclist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Get a randomly shuffled list of four zodiac signs, one of which is correct\n",
-    "testlist=wronglist\n",
+    "testlist=[]\n",
+    "for item in fakes:\n",
+    "    testlist.append(item)\n",
     "testlist.append(sign)\n",
     "random.shuffle(testlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guessdict={}\n",
+    "for i in range(len(testlist)):\n",
+    "    guessdict[i]= testlist[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
+     "data": {
+      "text/plain": [
+       "{0: 'aries', 1: 'capricorn', 2: 'cancer', 3: 'taurus', 4: 'aquarius'}"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guessdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "CHOICE NUMBER 1\n",
       "----------------\n",
-      "MOOD: Determined\n",
-      "Reading: You may be fired up for action (as usual), but the day's energy pretty much guarantees that any movement is slow and bumpy. Try to settle down and let it happen -- things pick up soon!\n",
+      "MOOD: Patient\n",
+      "Reading: Even though your friends are all talk today, you're not exasperated. In fact, you can listen to them banter and brag all day long without feeling restless -- it's just one of those days!\n",
       "\n",
       "\n",
       "CHOICE NUMBER 2\n",
       "----------------\n",
-      "MOOD: Busy\n",
-      "Reading: You need to deal with business today -- it may just be work, or it could be bills at home or something even more complex. Even if you'd rather duck the issue, it's not going anywhere!\n",
+      "MOOD: Hopeful\n",
+      "Reading: You stumble upon someone's scribbled note or unsent email that speaks to a part of you that you hadn't realized was still listening. It may intensify your romance or lead to something entirely new.\n",
       "\n",
       "\n",
       "CHOICE NUMBER 3\n",
       "----------------\n",
-      "MOOD: Energetic\n",
-      "Reading: It's a time of pretty intense healing for you -- even if you thought you were perfectly fine! Your amazing energy is hard at work putting everything right inside and outside, so kick back and let it happen!\n",
+      "MOOD: Thoughtful\n",
+      "Reading: Your thinking is far clearer than usual -- even if you still feel confused! It's a great time to write things down and order your thoughts in a way that helps you feel more confident about the future.\n",
       "\n",
       "\n",
       "CHOICE NUMBER 4\n",
       "----------------\n",
-      "MOOD: Creative\n",
-      "Reading: Your left brain is fully activated today, and you can think through even the most complex of plans with ease. It's a really good time for you to set yourself on a new course, even if it seems uncertain.\n",
+      "MOOD: Patient\n",
+      "Reading: This is not the time to sign anything -- you need to pull back and inspect the deal more thoroughly first, Even if it all looks good, put off any final agreements until tomorrow or even later.\n",
+      "\n",
+      "\n",
+      "CHOICE NUMBER 5\n",
+      "----------------\n",
+      "MOOD: Busy\n",
+      "Reading: You need a personal assistance or someone else to sweat the details -- you've got too much going on! In fact, you need to shift your focus to the big picture as soon as you possibly can.\n",
       "\n",
       "\n"
      ]
@@ -169,7 +279,7 @@
    ],
    "source": [
     "#Get readings from every entry on the testlist, and assign a number to each possible guess\n",
-    "for i in range(4):\n",
+    "for i in range(5):\n",
     "    params = (\n",
     "('sign', testlist[i]),\n",
     "('day', 'today'),\n",
@@ -190,54 +300,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Make your guess!</h2>\n",
+    "<h2>Remember, you have a 1/5th (20%) chance of getting this right. That's better than a dice roll! To really test the accuracy of your hororscopes, you must repeat this over the course of many days. The ideal number of trials is 30, but for a test like this, 15 will probably be more than enough.</h2>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-9d1da1f37f21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Make your guess!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmake_guess\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Type the number of your choice. Which zodiac reading sounds the most accurate to you?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nope!\n"
      ]
     }
    ],
    "source": [
-    "#Make your guess!\n",
-    "make_guess=input(\"Type the number of your choice. Which zodiac reading sounds the most accurate to you?\")"
+    "make_guess=int(input(\"Type the number of your choice. Which zodiac reading sounds the most accurate to you?\"))-1\n",
+    "if guessdict[make_guess]==sign:\n",
+    "    print (\"Congratulations! You were able to identify your real astrology sign today!\")\n",
+    "else:\n",
+    "    print(\"Sorry! Today you picked the incorrect astrology sign\")\n",
+    "\n",
+    "#This is the sign you picked\n",
+    "print(f\"Your Real Sign: {sign.title()} \")\n",
+    "your_guess=testlist[make_guess]\n",
+    "print(f\"Your Guess: {your_guess.title()}\")\n",
+    "\n",
+    "\n",
+    "#Generate today's datapoint\n",
+    "today = date.today()\n",
+    "correct = guessdict[make_guess]==sign:\n",
+    "correct_num = 0\n",
+    "if guessdict[make_guess]==sign:\n",
+    "    correct = 1\n",
+    "\n",
+    "datapoint=[today,sign, correct, correct_num,]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Let the computer guess randomly\n",
-    "compchoice=random.choice(testlist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Your Real Sign: Cancer \nYour Guess: Aquarius\n"
+      "Your Real Sign: Cancer \n",
+      "Your Guess: Aries\n"
      ]
     }
    ],
    "source": [
     "#This is the sign you picked\n",
     "print(f\"Your Real Sign: {sign.title()} \")\n",
-    "your_guess=testlist[int(make_guess)-1]\n",
+    "your_guess=testlist[make_guess]\n",
     "print(f\"Your Guess: {your_guess.title()}\")\n"
    ]
   },
@@ -284,10 +407,15 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "         Date True Sign Your Guess You Right Random Guess Random Right\n0  2021-04-22    cancer   aquarius     False       cancer         True\n1  2021-04-22    cancer   aquarius     False       cancer         True\n2  2021-04-22    cancer   aquarius         0            1         True\n3  2021-04-22    cancer   aquarius         0         True            1\n4  2021-04-22    cancer   aquarius         0       cancer            1\n"
+      "         Date True Sign Your Guess You Right Random Guess Random Right\n",
+      "0  2021-04-22    cancer   aquarius     False       cancer         True\n",
+      "1  2021-04-22    cancer   aquarius     False       cancer         True\n",
+      "2  2021-04-22    cancer   aquarius         0            1         True\n",
+      "3  2021-04-22    cancer   aquarius         0         True            1\n",
+      "4  2021-04-22    cancer   aquarius         0       cancer            1\n"
      ]
     }
    ],
@@ -314,16 +442,16 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "So far, you have made correct guesses 0.0% of the time.\n"
      ]
     },
     {
-     "output_type": "error",
      "ename": "ValueError",
      "evalue": "invalid literal for int() with base 10: 'True'",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -359,7 +487,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0    True\n",
@@ -370,12 +497,33 @@
        "Name: Random Right, dtype: object"
       ]
      },
+     "execution_count": 84,
      "metadata": {},
-     "execution_count": 84
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "compcol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35591768374958105"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvlaue=stats.ttest_1samp([array_of_truths],0.25)[1]"
    ]
   },
   {
@@ -385,5 +533,21 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "566c7dc836cf49ea79a80bde3a77d731ae67019fab1def2dd83c01090ce827fd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('DataViz': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
